test_case/rust-lang_rust/52471_406084694_79.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/block-result/block-must-not-have-result-do.rs","byte_start":498,"byte_end":502,"line_start":13,"line_end":13,"column_start":9,"column_end":13,"is_primary":true,"text":[{"text":"        true //~  ERROR mismatched types","highlight_start":9,"highlight_end":13}],"label":"expected (), found bool","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"expected type `()`\n   found type `bool`","code":null,"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error[E0308]: mismatched types\n  --> /checkout/src/test/ui/block-result/block-must-not-have-result-do.rs:13:9\n   |\nLL |         true //~  ERROR mismatched types\n   |         ^^^^ expected (), found bool\n   |\n   = note: expected type `()`\n              found type `bool`\n\n"}
[00:50:15] {"message":"aborting due to previous error","code":null,"level":"error","spans":[],"children":[],"rendered":"error: aborting due to previous error\n\n"}
[00:50:15] {"message":"For more information about this error, try `rustc --explain E0308`.","code":null,"level":"","spans":[],"children":[],"rendered":"For more information about this error, try `rustc --explain E0308`.\n"}
[00:50:15] fatal runtime error: failed to initiate panic, error 5
[00:50:15] ------------------------------------------
